fixed go-back button alignment bug

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,10 @@ nav {
 }
 .go-back img {
   width: 30px;
-  margin: 15px 0 0 15px;
+  /* margin: 15px 0 0 15px; */
+  position: absolute;
+  left: 15px;
+  top: 15px;
 }
 .logo {
   font-size: 2rem;
